# InstRO

./: .gitignore  CMakeLists.txt  cconfig.h.in  formatAll.sh  readme.md
config/cmake/: clang_toolchain.cmake  rose_toolchain.cmake
lib/: CMakeLists.txt
lib/include/instro/: Instrumentor.h  Pass.h  PassFactory.h
lib/include/instro/clang/: ClangInstrumentor.h  ClangPassFactory.h
lib/include/instro/clang/core/: ClangConstruct.h  ClangConsumerFactory.h  ClangPassExecuter.h  ClangPassImplBase.h
lib/include/instro/clang/pass/adapter/: ClangCygProfileAdapter.h  ClangMangledNameOutputAdapter.h
lib/include/instro/clang/pass/selector/: ClangBlackWhitelistSelector.h
lib/include/instro/clang/support/: ClangHelpers.h  InstROASTConsumer.h
lib/include/instro/clang/tooling/: ClangAnalysisInterface.h  ClangConstructTraitInterface.h  ClangNamedConstructAccess.h
lib/include/instro/core/: ChannelConfiguration.h  ConstructSet.h  ConstructTraitType.h  Options.h  PassImplementation.h  PassManager.h  SimplePassManager.h  Singleton.h
lib/include/instro/misc/: VisualizingManager.h  VisualizingPassManager.h
lib/include/instro/pass/adapter/: ConstructHierarchyASTDotGenerator.h  ConstructPrinterAdapter.h  DefaultInstrumentationAdapter.h
lib/include/instro/pass/selector/: BooleanCompoundSelector.h  CallPathSelector.h  ConstructTraitSelector.h  ElevatorSelector.h  IdentifierMatcherSelector.h  ProgramEntrySelector.h
lib/include/instro/rose/: RoseInstrumentor.h  RosePassFactory.h
lib/include/instro/rose/core/: RoseConstructPredicates.h  RoseConstructSet.h  RosePassImplementation.h
lib/include/instro/rose/pass/adapter/: RoseDefaultInstrumentationAdapter.h  RoseScorepRegionInstrumentationAdapter.h  RoseStrategyBasedAdapter.h
lib/include/instro/rose/pass/adapter/StrategyBasedAdapterSupport/: CodeInsertionHelper.h  CodeInsertionPointSelector.h  GenericInstrumentationStrategy.h  ToolInitializer.h  instrobuilder.h
lib/include/instro/rose/pass/adapter/StrategyBasedAdapterSupport/ScorePInstrumentation/: ScorePAdapterBuilder.h  ScorePFunctionScopeStrategy.h  ScorePInitializer.h  ScorePLoopIterationStrategy.h  ScorePStatementWrapperStrategy.h
lib/include/instro/rose/pass/adapter/support/: RoseCodeWrapper.h  RosePostOrderInstrumentationAdapter.h  RoseScorepCodeWrapper.h
lib/include/instro/rose/pass/transformer/: RoseFunctionWrapper.h  RoseUniqueCallpathTransformer.h
lib/include/instro/rose/tooling/: RoseAnalysisInterface.h  RoseConstructElevator.h  RoseConstructTraitInterface.h  RoseControlFlowGraph.h  RoseExtendedCallGraph.h  RoseNamedConstructAccess.h
lib/include/instro/rose/utility/: ASTHelper.h  ASTTransformer.h  FunctionRenamer.h
lib/include/instro/tooling/: AnalysisInterface.h  ConstructElevator.h  ConstructTraitInterface.h  ControlFlowGraph.h  ExtendedCallGraph.h  IdentifierProvider.h  NamedConstructAccess.h
lib/include/instro/utility/: BWLFileReader.h  CommandlineHandling.h  ConfigurationLoader.h  Container.h  Environment.h  Iterator.h  Logger.h  MemoryManagement.h  exception.h
lib/src/: Pass.cpp  PassFactory.cpp
lib/src/clang/: CMakeLists.txt  ClangInstrumentor.cpp
lib/src/clang/core/: CMakeLists.txt  ClangConstruct.cpp  ClangPassFactory.cpp
lib/src/clang/pass/adapter/: CMakeLists.txt  ClangCygProfileAdapter.cpp  ClangMangledNameOutputAdapter.cpp
lib/src/clang/pass/selector/: CMakeLists.txt  ClangBlackWhitelistSelector.cpp
lib/src/clang/support/: CMakeLists.txt  ClangConsumerFactory.cpp  ClangHelpers.cpp  InstROASTConsumer.cpp
lib/src/clang/tooling/: CMakeLists.txt  ClangConstructTraitInterface.cpp  ClangNamedConstructAccess.cpp
lib/src/clang/utility/: ClangConfigurationPassRegistry.cpp
lib/src/core/: CMakeLists.txt  ConstructSet.cpp  ConstructTraitType.cpp  PassImplementation.cpp  SimplePassManager.cpp  Singleton.cpp
lib/src/pass/: CMakeLists.txt
lib/src/pass/adapter/: ConstructPrinterAdapter.cpp  DefaultInstrumentationAdapter.cpp
lib/src/pass/selector/: BooleanCompoundSelector.cpp  CallPathSelector.cpp  ConstructTraitSelector.cpp  ElevatorSelector.cpp  IdentifierMatcherSelector.cpp  ProgramEntrySelector.cpp
lib/src/rose/core/: RoseConstructSet.cpp  RosePassFactory.cpp
lib/src/rose/pass/adapter/: RoseDefaultInstrumentationAdapter.cpp  RoseScorepRegionInstrumentationAdapter.cpp  RoseStrategyBasedAdapter.cpp
lib/src/rose/pass/adapter/StrategyBasedAdapterSupport/: CodeInsertionHelper.cpp  CodeInsertionPointSelector.cpp  GenericInstrumentationStrategy.cpp  ToolInitializer.cpp  instrobuilder.cpp
lib/src/rose/pass/adapter/StrategyBasedAdapterSupport/ScorePInstrumentation/: ScorePAdapterBuilder.cpp  ScorePFunctionScopeStrategy.cpp  ScorePInitializer.cpp  ScorePLoopIterationStrategy.cpp  ScorePStatementWrapperStrategy.cpp
lib/src/rose/pass/adapter/support/: RoseCodeWrapper.cpp  RosePostOrderInstrumentationAdapter.cpp  RoseScorepCodeWrapper.cpp
lib/src/rose/pass/transformer/: RoseFunctionWrapper.cpp  RoseUniqueCallpathTransformer.cpp
lib/src/rose/tooling/: RoseConstructElevator.cpp  RoseConstructTraitInterface.cpp  RoseControlFlowGraph.cpp  RoseExtendedCallGraph.cpp  RoseNamedConstructAccess.cpp
lib/src/rose/utility/: ASTHelper.cpp  ASTTransformer.cpp  FunctionRenamer.cpp  RoseConfigurationPassRegistry.cpp
lib/src/tooling/: CMakeLists.txt  ConstructElevator.cpp  ControlFlowGraph.cpp  ExtendedCallGraph.cpp  IdentifierProvider.cpp  NamedConstructAccess.cpp
lib/src/utility/: BWLFileReader.cpp  CMakeLists.txt  CommandlineHandling.cpp  ConfigurationLoader.cpp  Environment.cpp  Logger.cpp
test/: ApplyRunner.py  BooleanCompoundSelectorTest.cpp  CMakeLists.txt  CallpathSelectorTest.cpp  CompileRunner.py  ConstructElevatorSelectorTest.cpp  ConstructHierarchySelectionTestMain.cpp  DefaultInstrumentationAdapterTest.cpp  IdentifierSelectorTest.cpp
test/input/ConstructHierarchySelectionTest/: loop2.in
test/lib/: ClangTestSupport.h  TestAdapter.h
